# gnubg

./: .gitignore  Makefile.am  analysis.c  credits.sh  eval.c  eval.h  export.c  external_y.y  format.c  formatgs.c  gnubg.c  gnubgmodule.c  gtk-multiview.h  gtkboard.c  gtkboard.h  gtkchequer.c  gtkcube.c  gtkgame.c  gtkgame.h  gtkoptions.c  gtkoptions.h  gtkprefs.c  gtkrelational.c  gtktempmap.c  gtktheory.c  gtktoolbar.c  gtkuidefs.h  html.c  import.c  meson.build  movefilters.inc  multithread.c  play.c  render.c  render.h  renderprefs.c  rollout.c  set.c  set.h  show.c  (+1 more)
.github/winmakeconfig/: Makefile3D  MakefileOld  config.gui3D  config.guiOld  gnubg3D.bat  gnubgOld.bat
.github/winmakeconfig/board3d/: Makefile
.github/winmakeconfig/lib/: Makefile
.github/workflows/: build.yml  publish.yml
board3d/: PickOGL.c
lib/: cache.h  neuralnet.c  neuralnetsse.c  sigmoid.h
